# cs-manim

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  test_imports.py
.github/workflows/: ci.yml
cs_manim/: __init__.py  style.py
cs_manim/objects/: __init__.py  android_logo.py  apple_logo.py  cloud.py  computer.py  database.py  http_call.py  mobile_phone.py  monitor.py  portable_computer.py  server.py  test_tube.py
examples/: basic_example.py  http_call_example.py
scripts/: README.md  export_objects.py
tests/: __init__.py  test_basic.py  test_http_call.py
